fix: visibility update

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -113,7 +113,7 @@ button {
 
 .subset {
   padding: 0.5rem 0 0 0;
-  opacity: 0.3;
+  opacity: 0.6;
 }
 
 .sub {
